[DOTCOM-182332] Fixing acceesibility color contrast issue (#728)
Resolves:
[DOTCOM-182332](https://jira.corp.adobe.com/browse/DOTCOM-182332)

**Test URLs:**
- Before:
https://main--cc--adobecom.aem.page/products/firefly/features/ai-graphic-design-generator?unitylibs=stage
- After:
https://main--cc--adobecom.aem.page/products/firefly/features/ai-graphic-design-generator?unitylibs=cssFix

--- a/unitylibs/core/widgets/prompt-bar-style/prompt-bar-style.css
+++ b/unitylibs/core/widgets/prompt-bar-style/prompt-bar-style.css
@@ -1054,7 +1054,7 @@
 }
 
 .unity-prompt-bar-style .unity-slf-copy-label {
-  color: #7d7d7d;
+  color: #d1d1d1;
   font-family: "Adobe Clean", adobe-clean, "Adobe Clean Serif", sans-serif;
   font-size: var(--Font-size-100, 14px);
   font-style: normal;
@@ -1157,7 +1157,7 @@
 .unity-prompt-bar-style .unity-slf-style-label {
   flex-shrink: 0;
   overflow: hidden;
-  color: #7D7D7D;
+  color: #d1d1d1;
   text-overflow: ellipsis;
   font-family: "Adobe Clean", adobe-clean, "Adobe Clean Serif", sans-serif;
   font-size: 12px;
